--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 
 
-  <title>Red Cinco Diario Digital</title>
+  <title>Diario Red Cinco</title>
   <!-- ////////////////////////// -->
   <!-- BEGIN CSS website dependencies -->
   <!-- ////////////////////////// -->
